--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>BrandonAbe's Odin Project</title>
         <meta name="description" content="BrandonAbe's Odin Project">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta lang="en">
     </head>
     <body>
         <h1>Introduction:</h1>
