--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-
         <title>BrandonAbe's Odin Project</title>
+        <meta charset="utf-8">
         <meta name="description" content="BrandonAbe's Odin Project">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en">
     </head>
     <body>
         <h1>Introduction:</h1>
