Adding note about comments

--- a/blog_exercise.html
+++ b/blog_exercise.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <!-- Cmd / to create comments -->
             <h1> My First Blog</h1>
             <h2> Check out my fake blog!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ratione doloremque maxime distinctio, 
