Added reversed list

--- a/learning_lists.html
+++ b/learning_lists.html
@@ -15,7 +15,7 @@
         
     
     <h1>An ordered list of todo's you need to get done today:</h1>
-        <ol>
+        <ol reversed>
             <li>Participate in The Odin Project</li>
             <li>Watch Pitch Perfect 3</li>
             <li>Put away the dishes</li>
