--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Homepage</h1>
     <!-- Anchors allow for linking -->
-    <a href=""https://www.theodinproject.com/about"">About The Odin Project</a>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+
     
 </body>
 </html>
