--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,7 +9,7 @@
     <h1>Homepage</h1>
     <!-- Anchors allow for linking -->
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
-
+    <br> <!-- Line break in HTML-->
     <a href="about.html">About</a>
 </body>
 </html>
