added new line for image formatting

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -11,7 +11,7 @@
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
     <br> <!-- Line break in HTML-->
     <a href="./pages/about.html">About</a>
-
-    <img src="./images/dog.jpg">
+    
+    <br><img src="./images/dog.jpg">
 </body>
 </html>
