--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>About Page</h1>
-    <br><img src="../images/dog.jpg">
+    <br><img src="../images/dog.jpg" alt="Charles the puppy" height="310" width="310">
   </body>
 </html>
